feat(prevent-duplicate): create api to prevent duplications of medicines
