# src/validations/medicationValidation.js
@@ -409,10 +409,23 @@ const medicationOnboardingSchema = z
     }
   });
 
+const checkDuplicateMedicationSchema = z.object({
+  medicationName: medicationNameField,
+  medicationType: z
+    .string()
+    .trim()
+    .refine((val) => medicationTypeValues.includes(val), {
+      message: errorConstants.INVALID_MEDICATION_TYPE,
+    })
+    .optional()
+    .nullable(),
+});
+
 module.exports = {
   createMedicationSchema,
   updateMedicationSchema,
   listMedicationQuerySchema,
   refillMedicationSchema,
   medicationOnboardingSchema,
+  checkDuplicateMedicationSchema,
 };
